syntax = "proto3";
package clientspace;

option go_package = "commonspace/clientspaceproto";

service ClientSpace {
    rpc SpaceExchange(SpaceExchangeRequest) returns (SpaceExchangeResponse);
}

message SpaceExchangeRequest {
    repeated string spaceIds = 1;
}

message SpaceExchangeResponse {
    repeated string spaceIds = 1;
}